@@ -1,7 +1,8 @@
-# Copyright (c) 2009-2012 Luke Maurits <luke@maurits.id.au>
+# Copyright (c) 2009-2013 Luke Maurits <luke@maurits.id.au>
 # All rights reserved.
 # With contributions from:
 #  * Chris Clark
+#  * Christoph Robbert
 #  * Klein Stephane
 #
 # Redistribution and use in source and binary forms, with or without
