@@ -1,10 +1,14 @@
-########## PrettyTable 0.7 - Jan XX, 2013 ###########
+########## PrettyTable 0.7 - Feb XX, 2013 ###########
 
-* Improved Python 3 compatibility.
+* Improved Python 2 and 3 compatibility (2.4-3.2).
 * Improved support for non-Latin characters.  Table widths should
   now be calculated correctly for tables with e.g. Japanese text.
 * Table contents can now be read in from a .csv file
 * Table contents can now be read in from a DB-API compatible cursor
+* Table contents can now be read in from a string containing a
+  HTML table (thanks to Christoph Robbert for submitting this patch!)
+* new valign attribute controls vertical alignment of text when
+  some cells in a row have multiple lines of text and others don't.
 * hrules attribute can now be set to HEADER, which draws a rule only
   under the header row
 * new vrules attribute controls drawing of vertical rules and can
